--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.3",
+    "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
