--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "clean-css-cli": "^5.2.2",
     "handlebars": "^4.7.7",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-frame-component": "^4.1.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -27,7 +29,12 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "build-css": "NODE_ENV=production npx tailwindcss-cli@latest build ./src/index.css -o ./public/css/tailwind.css",
+    "build-css": "npm run build-tailwindcss && npm run clean-css",
+    "build-tailwindcss": "NODE_ENV=production npx tailwindcss-cli@latest build ./src/tailwind.css -o ./public/css/tailwind.css",
+    "clean-css": "./node_modules/clean-css-cli/bin/cleancss -o ./public/css/tailwind.min.css  ./public/css/tailwind.css",
+    "build-css-full": "npm run build-tailwindcss-full && npm run clean-css-full",
+    "build-tailwindcss-full": "NODE_ENV=production npx tailwindcss-cli@latest build ./src/tailwind.css -c ./tailwind-full.config.js -o ./public/css/tailwind-full.css",
+    "clean-css-full": "./node_modules/clean-css-cli/bin/cleancss -o ./public/css/tailwind-full.min.css  ./public/css/tailwind-full.css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
