--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "clean-css-cli": "^5.2.2",
     "handlebars": "^4.7.7",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
@@ -16,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.3",
@@ -32,9 +32,9 @@
     "build-css": "npm run build-tailwindcss && npm run clean-css",
     "build-tailwindcss": "NODE_ENV=production npx tailwindcss-cli@latest build ./src/tailwind.css -o ./public/css/tailwind.css",
     "clean-css": "./node_modules/clean-css-cli/bin/cleancss -o ./public/css/tailwind.min.css  ./public/css/tailwind.css",
-    "build-css-full": "npm run build-tailwindcss-full && npm run clean-css-full",
-    "build-tailwindcss-full": "NODE_ENV=production npx tailwindcss-cli@latest build ./src/tailwind.css -c ./tailwind-full.config.js -o ./public/css/tailwind-full.css",
-    "clean-css-full": "./node_modules/clean-css-cli/bin/cleancss -o ./public/css/tailwind-full.min.css  ./public/css/tailwind-full.css",
+    "build-css-first": "npm run build-tailwindcss-first && npm run clean-css-first",
+    "build-tailwindcss-first": "NODE_ENV=production npx tailwindcss-cli@latest build ./src/tailwind.css -c tailwind-first.config.js -o ./public/css/tailwind-first.css",
+    "clean-css-first": "./node_modules/clean-css-cli/bin/cleancss -o ./public/css/tailwind-first.min.css  ./public/css/tailwind-first.css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.4",
     "autoprefixer": "^9.8.6",
+    "clean-css-cli": "^5.2.2",
     "craco-raw-loader": "^1.0.1",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4"
