--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
     "redux": "^4.0.5",
